design (without validation, date ant time pickers or reports adapter and list items). data and connection classes.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,12 @@ dependencies {
     //navigation components
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+
+    //LiveData Library
+    implementation "androidx.lifecycle:lifecycle-livedata:2.0.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.0.0"
 }
