--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata:2.0.0"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.0.0"
     
-    //Room Database
+    //Console Database
     implementation "androidx.room:room-runtime:2.1.0"
     annotationProcessor "androidx.room:room-compiler:2.1.0"
 }
