--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,28 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="m">
-        <activity
-            android:name=".ui.MainActivity">
+        <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".data.database.util.ConsoleLogService"
-            android:exported="false"/>
-    </application>
 
+        <activity android:name=".ui.console.ConsoleActivity" />
+
+        <activity
+            android:name=".ui.reports.SelectReportActivity"
+            android:parentActivityName=".ui.console.ConsoleActivity" />
+
+        <activity
+            android:name=".ui.lastActions.LastActionsActivity"
+            android:parentActivityName=".ui.console.ConsoleActivity" />
+
+        <activity android:name=".ui.ip.IPActivity" />
+
+        <service
+            android:name=".data.database.util.ConsoleLogService"
+            android:exported="false" />
+    </application>
 </manifest>
